Fix a typo in urxvt.conf; make s-t launch urxvt, not rxvt-unicode

--- a/dotfiles/urxvt.conf
+++ b/dotfiles/urxvt.conf
@@ -1,6 +1,6 @@
-URxvt.saveLiens:        1024
+URxvt.saveLines:        1024
 
-URxvt.internalBorder:   4
+URxvt.internalBorder:   6
 URxvt.scrollStyle:      rxvt
 URxvt.scrollBar:        false
 
