Add more URxvt specific configurations

--- a/dotfiles/urxvt.conf
+++ b/dotfiles/urxvt.conf
@@ -1,10 +1,17 @@
-URxvt.saveLines:        1024
-
+URxvt.geometry:         100x30
 URxvt.internalBorder:   6
-URxvt.scrollStyle:      rxvt
+
+URxvt.saveLines:        1024
 URxvt.scrollBar:        false
+URxvt.scrollStyle:      rxvt
+URxvt.secondaryScreen:  1
+URxvt.secondaryScroll:  1
+!URxvt.secondaryWheel:  1
 
 URxvt.font:             xft:Source Code Pro:size=12
+URxvt.background:       #000000
+URxvt.foreground:       #cecece
+URxvt.letterSpace:      -1
 
 URxvt.visualBell:       false
 URxvt.cursorBlink:      false
